fix: update Groq model name to match app.py

--- a/env.example
+++ b/env.example
@@ -11,5 +11,5 @@ GROQ_API_KEY=your-groq-api-key-here
 # Optional: Configure the number of documents to retrieve (default: 4)
 # RETRIEVER_K=4
 
-# Optional: Configure the model to use (default: mixtral-8x7b-32768)
-# GROQ_MODEL=mixtral-8x7b-32768 
+# Optional: Configure the model to use (default: llama-3.3-70b-versatile)
+# GROQ_MODEL=llama-3.3-70b-versatile 
