--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-langchain
-pinecone
-groq-client
-PyMuPDF
-python-dotenv
-pypdf
-sentence-transformers
+streamlit>=1.31.0
+langgraph>=0.0.10
+langchain-community>=0.0.10
+langchain-groq>=0.0.1
+langchain-huggingface>=0.0.1
+qdrant-client>=1.7.0
+sentence-transformers>=2.2.2
+python-dotenv>=1.0.0
+PyPDF2>=3.0.0
